--- a/services.html
+++ b/services.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <h1>About</h1>
+    <h1>Our Services</h1>
     <script src="./js/app.js" ></script>
 </body>
 </html>
